# rai

./: MANIPULATION_DEBUG_STRATEGY.md  MIGRATION_ANALYSIS.md  README.md  config.toml  configurator_err.md  debug_manipulation_demo.py  langfuse_debug.py  pyproject.toml  quick_diagnostic.py  setup_shell.sh  test_debug_images.py
docker/: err.md
docs/: api_design_considerations.md  pypi_release.md
myscripts/: fasttps.sh  (+25 more)
src/rai_extensions/rai_perception/: MIGRATION.md  README.md  follow-ups.md  package.xml  pyproject.toml  rethinking_usability.md  setup.py
src/rai_extensions/rai_perception/rai_perception/: __init__.py  utils.py
src/rai_extensions/rai_perception/rai_perception/agents/: grounded_sam.py  grounding_dino.py
src/rai_extensions/rai_perception/rai_perception/algorithms/: segmenter copy.py  segmenter.py
src/rai_extensions/rai_perception/rai_perception/components/: __init__.py  detection_publisher.py  gripping_points.py  pcl_detection.py  perception_presets.py  service_utils.py
src/rai_extensions/rai_perception/rai_perception/models/: detection.py  segmentation.py
src/rai_extensions/rai_perception/rai_perception/scripts/: run_perception_services.py
src/rai_extensions/rai_perception/rai_perception/services/: base_vision_service.py  detection_service.py  segmentation_service.py  weights.py
src/rai_extensions/rai_perception/rai_perception/tools/: __init__.py  gdino_tools.py  gripping_points_tools.py  pcl_detection.py  pcl_detection_tools.py  segmentation_tools.py
src/rai_pubtest/: README.md  pyproject.toml
src/rai_pubtest/rai_pubtest/: __init__.py
(+82 files in other folders)
