[tool.poetry]
name = "rai-perception"
version = "0.1.0"
description = "Package for object detection, segmentation and gripping point detection."
authors = []
readme = "README.md"
packages = [
    { include = "rai_perception", from = "." },
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.3.1"
torchvision = "^0.18.1"
rf-groundingdino = "^0.2.0"
# TODO(juliaj): for testing purpose only, update version once rai-sam2 is published
rai-sam2 = { version = "1.1.2", source = "test-pypi" }
rai_core = ">=2.0.0.a2,<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
